--- a/src/css/business_uk.css
+++ b/src/css/business_uk.css
@@ -342,11 +342,23 @@ a:hover {
 /*...end header...*/
 /*...introduction...*/
 .introduction-wrap {
+  position: relative;
   background: url('../images/business_bg.png') center center no-repeat;
   -webkit-background-size: cover;
   background-size: cover;
   padding: 153px 0;
 }
+
+.introduction-wrap::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.1);
+}
+
 .introduction-desc {
   width: 50%;
   max-width: 812px;
@@ -355,7 +367,8 @@ a:hover {
   font-size: 70px;
   text-align: left;
   line-height: 85px;
-  color: #ffffff;
+  color: #fff;
+  letter-spacing: 3px;
 }
 /*...end introduction...*/
 /*...whyOpenPay...*/
