--- a/src/css/home_uk.css
+++ b/src/css/home_uk.css
@@ -37,7 +37,7 @@ a {
 
 .banner-wrap {
   min-height: 250px;
-  background: url(../images/home_bg.png) no-repeat;
+  background: url(../images/home_bg.jpg) no-repeat;
   background-size: cover;
 }
 .banner {
@@ -211,7 +211,6 @@ h1 {
   min-width: 240px;
   max-width: 300px;
   margin: 0 auto;
-  font-family: 'Poppins', sans-serif;
   margin-top: 15px;
   font-size: 19px;
   line-height: 25px;
@@ -341,10 +340,6 @@ footer a {
 
   .banner {
     min-height: 400px;
-  }
-
-  .banner h1 {
-    /* margin-bottom: 25px; */
   }
 
   .forWhomItWorks {
@@ -594,11 +589,10 @@ footer a {
   .forWhomItWorks h2 {
     width: 90%;
     line-height: 38px;
-    font-size: 25px;
   }
   .forWhomItWorks div:nth-of-type(2) p {
     margin: 0 0 30px 0;
     line-height: 30px;
-    font-size: 20px;
+    font-size: 25px;
   }
 }
