--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -322,8 +322,6 @@ div {
   .footer .socialLinks span {
     display: block;
   }
-  .footer .socialLinks span:last-child {
-  }
   .footer .socialLinks a {
     display: block;
     text-align: left;
@@ -354,17 +352,8 @@ header {
 .header-nav,
 .header-nav .nav-list,
 .nav-footer .footer-nav-list {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-  -webkit-justify-content: space-between;
-  -ms-flex-pack: justify;
   justify-content: space-between;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
   align-items: center;
 }
 
@@ -461,12 +450,10 @@ header {
 }
 
 .nav-footer {
-  width: 56.829268292682926829268292682927%;
+  max-width: 720px;
   margin: 0 auto 100px;
 }
 .nav-footer .footer-nav-list {
-  -webkit-flex-wrap: wrap;
-  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
 }
 .nav-footer .footer-nav-list li {
@@ -507,24 +494,11 @@ footer .copyright {
     height: 115px;
   }
   .header {
-    -webkit-box-orient: vertical !important;
-    -webkit-box-direction: normal !important;
-    -webkit-flex-direction: column !important;
-    -ms-flex-direction: column !important;
     flex-direction: column !important;
   }
   .header-logo-and-trigger {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: justify;
-    -webkit-justify-content: space-between;
-    -ms-flex-pack: justify;
     justify-content: space-between;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
     align-items: center;
     width: 100%;
   }
@@ -532,18 +506,10 @@ footer .copyright {
     display: block;
   }
   .header-nav {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
     flex-direction: column;
     padding-top: 30px;
   }
   .header-nav .nav-list {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
     flex-direction: column;
     margin-right: 0;
     margin-bottom: 20px;
@@ -552,11 +518,10 @@ footer .copyright {
     margin: 0 0 10px;
   }
   .nav-footer .footer-nav-list {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
     flex-direction: column;
+  }
+  .nav-footer .footer-nav-list li {
+    margin-right: 0;
   }
 }
 
@@ -564,13 +529,11 @@ footer .copyright {
   margin: 0;
   padding: 0;
   outline: none;
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
 .block-wap {
   width: 100%;
-  /* max-width: 1920px; */
   margin: 0 auto;
 }
 
