--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -4,23 +4,35 @@
   padding: 0;
   box-sizing: border-box;
 }
-html {
-  box-sizing: border-box;
-}
+
 *,
 *:before,
 *:after {
   box-sizing: inherit;
 }
+
+html {
+  height: 100%;
+  width: 100%;
+  overflow-x: hidden;
+}
+
+button {
+  -webkit-appearance: none;
+  border: none;
+}
+
 ol,
 ul {
   list-style: none;
   font-weight: 300;
 }
+
 a {
   color: inherit;
   text-decoration: none;
 }
+
 h1,
 h2,
 h3,
@@ -42,6 +54,7 @@ p,
 ol,
 ul {
   font-weight: 300;
+  -webkit-font-smoothing: antialiased;
 }
 
 button:focus,
