--- a/src/css/contact_uk.css
+++ b/src/css/contact_uk.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900');
+@import url('https://fonts.googleapis.com/css?family=Poppins:300,500,600,700,800');
+@import './nav.css';
 
 .hero {
   background: url(../images/contact/contact-bg.jpg) center no-repeat;
