--- a/src/css/contact_uk.css
+++ b/src/css/contact_uk.css
@@ -72,6 +72,11 @@
   display: block;
 }
 
+.contact__link:hover {
+  border-color: rgba(25, 184, 233, .8);
+  color: rgba(0, 0, 0, .7);
+}
+
 @media screen and (max-width: 768px) {
   .hero__title {
     font-size: 50px;
