--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -565,6 +565,7 @@ footer .copyright {
 
 .cookie-popup {
   position: fixed;
+  z-index: 2;
   bottom: 10px;
   font-size: 14px;
   font-weight: 400;
